--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ streamlit
 pandas
 numpy
 plotly
+kaleido                # optional but required for PNG export
+streamlit-plotly-events  # optional but required for click drilldown
+img2pdf       
