--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ numpy
 plotly
 kaleido                # optional but required for PNG export
 streamlit-plotly-events  # optional but required for click drilldown
-img2pdf       
+img2pdf                # optional for multi-image -> single PDF export
